# bangumi-rs

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  config.example.toml  docker-compose.yml  nginx.conf
.github/: release-please-config.json  release-please-manifest.json
.github/ISSUE_TEMPLATE/: 功能请求.md  疑问解答.md  程序错误报告.md
.github/workflows/: checks.yml  create-release-pr.yml  deploy-docs.yml  deploy.yml  docker.yml  docs-check.yml  release-backend.yml  release-frontend.yml  release-please.yml  release.yml
crates/cli-app/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
crates/cli-app/src/: config.rs  main.rs
crates/dict/: CHANGELOG.md  Cargo.toml
crates/dict/src/: code.rs  lib.rs
crates/downloader/: CHANGELOG.md  Cargo.toml  README.md
crates/downloader/src/: actor.rs  config.rs  context.rs  db.rs  dlrs.rs  errors.rs  lib.rs  metrics.rs  pan_115_dl.rs  resource.rs  retry.rs  stm.rs  syncer.rs  tasks.rs  worker.rs
crates/downloader/tests/: mock_store.rs  test_worker.rs
crates/metadata/: CHANGELOG.md  Cargo.toml
crates/metadata/src/: db.rs  fetcher.rs  lib.rs  matcher.rs  mdb_bgmtv.rs  mdb_mikan.rs  mdb_tmdb.rs  metrics.rs  worker.rs
crates/metadata/src/providers/: mikan.rs  mod.rs
crates/model/: CHANGELOG.md  Cargo.toml
crates/model/src/: lib.rs
crates/model/src/entity/: bangumi.rs  dictionary.rs  episode_download_tasks.rs  episodes.rs  file_name_parse_record.rs  mikan_scraper_record.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  subscriptions.rs  torrent_download_tasks.rs  torrents.rs
crates/model/src/migrator/: mod.rs
crates/notify/: CHANGELOG.md  Cargo.toml
crates/notify/src/: lib.rs  telegram.rs  worker.rs
crates/parser/: CHANGELOG.md  Cargo.toml
crates/parser/src/: db.rs  lib.rs  worker.rs
crates/parser/src/impls/: anitomy.rs  deepbricks.rs  deepseek.rs  mod.rs  ollama.rs  raw.rs  siliconflow.rs
crates/scheduler/: CHANGELOG.md  Cargo.toml
crates/scheduler/src/: db.rs  lib.rs  metrics.rs  scheduler.rs  selector.rs  subscribe.rs  tasks.rs  worker.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  logger.rs  model.rs  router.rs  server.rs  tracing.rs  ws.rs
develop/: schema.sql
develop/migrations/: V1.0.0__init.sql  V1.0.1__bgm_kind.sql  V1.0.2__task_interval.sql  V1.0.3__sub_option.sql  V1.0.4__remove_tmdb_uk.sql  V1.0.5__torrent_source.sql  V1.0.6__task_state.sql  V1.0.7__resource.sql  V1.0.9__downloader.sql  V1.1.0__sub_option.sql  V1.1.1__resource.sql  V1.1.2__tid.sql
docs/: build.md  config.md  index.md  package-lock.json
docs/.vitepress/: config.mts
docs/configuration/: downloader.md  index.md  notification.md  parser.md  proxy.md  server.md  sites.md
docs/deploy/: binary.md  docker.md  index.md  source.md
docs/deployment/: index.md
docs/features/: download.md  index.md  metadata.md  notification.md  parser.md  play.md  subscription.md
docs/introduction/: architecture.md  features.md  index.md
docs/quickstart/: basic-usage.md  index.md  ui-preview.md
docs/site/: README.md  package-lock.json  package.json
docs/site/docs/.vuepress/: config.js
docs/site/docs/.vuepress/.temp/git/: config.js
docs/site/docs/.vuepress/.temp/internal/: clientConfigs.js  routes.js  siteData.js  themeData.js
docs/site/docs/.vuepress/.temp/markdown-tab/: config.js
docs/site/docs/.vuepress/.temp/pages/: 404.html.js  get-started.html.js  index.html.js
docs/site/docs/.vuepress/.temp/pages/config/: index.html.js  index.html.vue
docs/site/docs/.vuepress/.temp/pages/development/: index.html.js  index.html.vue
docs/site/docs/.vuepress/.temp/pages/guide/: getting-started.html.js  getting-started.html.vue  index.html.js  index.html.vue
docs/site/docs/.vuepress/.temp/prismjs/: config.js
docs/site/docs/config/: README.md
docs/site/docs/development/: README.md
docs/site/docs/guide/: README.md  getting-started.md
docs2/: config.md
libs/acgrip/: Cargo.toml
libs/acgrip/src/: client.rs  model.rs
libs/alist/: Cargo.toml
libs/alist/src/: auth.rs  client.rs  error.rs  fs.rs  lib.rs  model.rs
libs/anitomy-rs/: CHANGELOG.md  Cargo.toml
libs/anitomy-rs/src/: element.rs  keyword.rs  lib.rs  options.rs  parser.rs  tokenizer.rs  utils.rs
libs/anitomy-rs/tests/: data.json  parser.rs
libs/bangumi-tv/: CHANGELOG.md  Cargo.toml
libs/bangumi-tv/src/: client.rs  model.rs
libs/mikan/: CHANGELOG.md  Cargo.toml
libs/mikan/src/: client.rs  model.rs  utils.rs
libs/pan-115/: CHANGELOG.md  Cargo.toml
libs/pan-115/src/: client.rs  dir.rs  download.rs  errors.rs  file.rs  iter.rs  lib.rs  model.rs  offline.rs  rsa.rs  xor.rs
libs/qbittorrent/: Cargo.toml
libs/qbittorrent/src/: client.rs  error.rs  ext.rs  lib.rs
libs/qbittorrent/src/model/: mod.rs  torrent.rs
libs/raw-parser/: Cargo.toml
libs/raw-parser/src/: config.rs  lib.rs  models.rs  parser.rs
libs/raw-parser/testdata/: test_cases.json
libs/tmdb/: CHANGELOG.md  Cargo.toml
libs/tmdb/src/: client.rs  lib.rs
libs/torrent/: Cargo.toml
libs/torrent/src/: lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: date.rs
libs/xml-rss/: Cargo.toml
libs/xml-rss/src/: client.rs  model.rs
src/: error.rs  lib.rs
web/: .prettierrc  CHANGELOG.md  Dockerfile  components.d.ts  index.html  nginx.conf  package-lock.json  package.json  typed-router.d.ts  vite.config.mts
web/src/: App.vue
web/src/api/: api.ts  model.ts
web/src/components/: DownloadTasksTable.vue  FileSelectionDialog.vue  LogViewer.vue  MediaCard.vue  RefreshDialog.vue  SnackbarProvider.vue  SubscribeDialog.vue  TMDBSearchDialog.vue
web/src/composables/: useSnackbar.ts
web/src/docs/: player-setup.md
web/src/pages/: anime.vue  bangumi-list.vue  dashboard.vue  detail.vue  downloads.vue  home.vue  index.vue  movies.vue  settings.vue  tv.vue
web/src/router/: index.ts  routes.ts
web/src/stores/: season.ts  snackbar.ts
web/src/types/: player.ts
web/src/utils/: format.ts
