[workspace]
members = [
    "crates/cli-app",
    "libs/mikan",
    "libs/pan-115",
    "crates/server",
    "crates/parser",
    "libs/anitomy-rs",
    "crates/notify",
    "libs/bangumi-tv",
    "libs/tmdb",
    "crates/model",
    "crates/downloader",
    "crates/scheduler",
    "crates/metadata",
    "crates/dict",
    "libs/acgrip",
    "libs/utils",
    "libs/torrent",
]
resolver = "2"


[workspace.dependencies]

# 日志
log = "0.4.25"
env_logger = "0.11.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# 错误处理
thiserror = "2.0.11"
anyhow = "1.0.95"
color-eyre = "0.6.3"

# 异步库
tokio = { version = "1.43.0" }
tokio-stream = "0.1.17"
tokio_schedule = "0.3.2"
async-trait = "0.1"

# 懒加载
lazy_static = "1.5.0"

# 命令行
clap = { version = "4.5.27" }
toml = "0.8.19"

# 网络请求
reqwest = { version = "0.12.7" }

# 爬虫
scraper = { version = "0.22.0" }

# 日期解析
chrono = "0.4.39"

# 解析torrent文件
bip_metainfo = "0.12.0"

# 操作数据库
sea-orm = { version = "1.1.4" }
sea-orm-migration = { version = "1.1.5" }
include_dir = "0.7.4"

# 序列化
serde = { version = "1.0.217" }
serde_json = "1.0.137"
serde_repr = "0.1"

# TMDB API
tmdb-api = "0.8.0"

walkdir = "2.4.0"

num = "0.4.3"
rand = "0.9.0"
hex = "0.4.3"
base64 = "0.22.1"
dotenv = "0.15"

# 服务端
actix-web = "4"
actix-files = "0.6.6"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
tracing-actix-web = "0.7.15"
console-subscriber = "0.4.1"
huby = "0.2.0"

teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "e6c0e2cb7f1ff44742bb9a8606cb936b55852d4d" }

regex = "1.11.0"
lru = "0.13.0"
# 限速
governor = { version = "0.8", features = ["jitter", "std"] }

# 内存分配
jemallocator = "0.5.4"
sysinfo = "0.33.1"


quick-xml = { version = "0.37.2" }
serde_bytes = "0.11.12"
sha1 = "0.10.6"
urlencoding = "2.1.3"
serde_bencode = { version = "0.2.4" }