[package]
name = "dict"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = {workspace = true, features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"]}
tokio = { workspace = true, features = ["full"] }
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
anyhow ={ workspace = true}
tracing = { workspace = true }
model = {path = "../../crates/model"}
thiserror = {workspace = true}

[dev-dependencies]
dotenv = {workspace = true}
tracing-subscriber = {workspace = true}