[package]
name = "downloader"
version = "0.1.1"
edition = "2021"

[dependencies]
sea-orm = {workspace = true, features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"]}
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
anyhow ={ workspace = true}
tracing = { workspace = true }
reqwest = {workspace = true}
lru = {workspace = true}
async-trait = {workspace = true}

pan-115 = {path = "../../libs/pan-115" }
model = {path = "../../crates/model" }
notify = {path = "../notify"}

[dev-dependencies]
dotenv = {workspace = true}
tracing-subscriber = { workspace = true }
