[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"], default-features = false }
lru = { workspace = true }
async-trait = { workspace = true }
qbittorrent = { path = "../../libs/qbittorrent" }
torrent = { path = "../../libs/torrent" }
pan-115 = { path = "../../libs/pan-115" }
alist = { path = "../../libs/alist" }
model = { path = "../../crates/model" }
notify = { path = "../notify" }
mockall = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
transmission-rpc = { workspace = true, features = ["sync"] }
base64.workspace = true
statig = { workspace = true, features = ["macro", "async"] }
[dev-dependencies]
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }