[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = {workspace = true, features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"]}
tokio = { workspace = true, features = ["full"] }
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
chrono = {workspace = true}

[dev-dependencies]
dotenv = {workspace = true}