[package]
name = "model"
version = "0.1.1"
edition = "2021"

[dependencies]
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
include_dir = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
