[package]
name = "notify"
version = "0.1.1"
edition = "2021"

[dependencies]

thiserror = {workspace = true}
anyhow ={ workspace = true}
tracing = { workspace = true }
async-trait = { workspace = true }
teloxide = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "multipart"] }
lru = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }