[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-cors = { workspace = true }
actix-ws = { workspace = true }
tracing-actix-web = { workspace = true }
console-subscriber = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio_schedule = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] , default-features = false}
chrono = { workspace = true }
tmdb-api = { workspace = true }
tmdb = { path = "../../libs/tmdb" }
bangumi-tv = { path = "../../libs/bangumi-tv" }
parser = { path = "../parser" }
metadata = { path = "../metadata" }
downloader = { path = "../downloader" }
mikan = { path = "../../libs/mikan" }
pan-115 = { path = "../../libs/pan-115" }
qbittorrent = { path = "../../libs/qbittorrent" }
model = { path = "../model" }
scheduler = { path = "../scheduler" }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
notify = { path = "../notify" }
dict = { path = "../dict" }
sysinfo = { workspace = true }
humantime-serde = { workspace = true }
sentry-tracing = { workspace = true }
sentry = { workspace = true, features = ["rustls", "reqwest"],default-features = false }
[dev-dependencies]
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
built = { workspace = true, features = ["git2", "chrono"] }

[features]
tokio_console = ["console-subscriber"]
