[package]
name = "alist"
version = "0.1.0"
edition = "2021"
description = "AList API封装库，提供对AList任务管理API的访问"

[dependencies]
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
