[package]
name = "mikan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true ,features = ["full"]}
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
scraper = {workspace = true}
tracing = {workspace = true}
huby = {workspace = true}
[dev-dependencies]
dotenv = {workspace = true}
tracing-subscriber = { workspace = true }