[package]
name = "mikan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true ,features = ["full"]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
scraper = {workspace = true}
tracing = {workspace = true}
huby = {workspace = true}
utils = { path = "../utils" }
quick-xml = { workspace = true, features = ["serialize"] }

[dev-dependencies]
dotenv = {workspace = true}
tracing-subscriber = { workspace = true }