[package]
name = "pan-115"
version = "0.1.0"
edition = "2021"

[dependencies]
num = {workspace = true}
rand = {workspace = true}
lazy_static = {workspace = true}
hex = {workspace = true}
base64 = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true, features = ["cookies", "json", "stream", "rustls-tls"], default-features = false}
tokio = {workspace = true, features = ["full"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio-stream = {workspace = true}
governor = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
dotenv = {workspace =  true}
tracing-subscriber = {workspace = true}