[package]
name = "qbittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tap = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }
[dev-dependencies]
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
