[package]
name = "raw-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
lazy_static.workspace = true
phf.workspace = true
serde_json = { workspace = true }

[dev-dependencies]
