[package]
name = "tmdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true ,features = ["full"]}
serde = { workspace = true , features = ["derive"]}
serde_json = { workspace = true }
serde_repr = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
tracing = {workspace = true}
tmdb-api = {workspace = true}
regex = {workspace = true}
lazy_static = {workspace = true}

[dev-dependencies]
dotenv = {workspace = true}
tracing-subscriber = {workspace = true}