[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde_bencode = { version = "0.2.4" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"
sha1 = "0.10.6"
hex = "0.4.3"
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = { workspace = true }
